# discord_lyrics_bot

./: README.md  bot.py  data_repository.py  main.py  models.py  pyproject.toml  spotify_api.py
Functions/: add_data.py  delete_data.py  get_data.py  guess_lyric.py  guess_lyrics.py
